// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen /> Debe de mostrar a Batman y el input con el valor del queryString 1`] = `
<div>
  <h1>
     Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <h4>
      Search Form
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchString"
        onChange={[Function]}
        placeholder="Find Your Hero"
        type="text"
        value="batman"
      />
      <button
        className="btn m-1 btn-block btn-outline-primary"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div>
    <br />
    <h4>
      Results
    </h4>
    <hr />
    <br />
    <div
      className="row row-cols-1 row-cols-md-3 g-4"
    >
      <a
        className="my-card"
        href="/hero/dc-batman"
        onClick={[Function]}
      >
        <img
          alt="Batman"
          className="img img-responsive animate__animated animate__fadeIn"
          src="../assets/heroes/dc-batman.jpg"
        />
        <div
          className="profile-name"
        >
          Batman
        </div>
        <div
          className="profile-position"
        >
          Bruce Wayne
        </div>
        <div
          className="profile-overview"
        >
          <div
            className="profile-overview"
          >
            <div
              className="row"
            >
              <div
                className="col-ms-4"
              >
                <h3>
                  DC Comics
                </h3>
                <p>
                  Primera Aparación: 
                  <br />
                  Detective Comics #27
                </p>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> Debe de mostrar un error si no se encuentra un heroe 1`] = `
<div>
  <h1>
     Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <h4>
      Search Form
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchString"
        onChange={[Function]}
        placeholder="Find Your Hero"
        type="text"
        value="batmanError123"
      />
      <button
        className="btn m-1 btn-block btn-outline-primary"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div>
    <br />
    <h4>
      Results
    </h4>
    <hr />
    <br />
    <div
      className="alert alert-danger"
    >
      There is no hero with '
      batmanError123
      '
    </div>
    <div
      className="row row-cols-1 row-cols-md-3 g-4"
    />
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> Debe de mostrarse correctamente con valores por defecto 1`] = `
<div>
  <h1>
     Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <h4>
      Search Form
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchString"
        onChange={[Function]}
        placeholder="Find Your Hero"
        type="text"
        value=""
      />
      <button
        className="btn m-1 btn-block btn-outline-primary"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div>
    <br />
    <h4>
      Results
    </h4>
    <hr />
    <br />
    <div
      className="alert alert-info"
    >
      Search a Hero
    </div>
    <div
      className="row row-cols-1 row-cols-md-3 g-4"
    />
  </div>
</div>
`;
